--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,17 +37,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TableLayout
-                android:id="@+id/table"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/qb_px_10"
-                android:layout_marginStart="@dimen/qb_px_10"
-                android:layout_marginEnd="@dimen/qb_px_15"
-                android:stretchColumns="*"
-                android:shrinkColumns="*">
+                android:orientation="vertical">
 
-            </TableLayout>
+                <TableLayout
+                    android:id="@+id/table"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/qb_px_10"
+                    android:layout_marginStart="@dimen/qb_px_10"
+                    android:layout_marginEnd="@dimen/qb_px_15"
+                    android:stretchColumns="*"
+                    android:shrinkColumns="*">
+
+                </TableLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/qb_px_20"/>
+            </LinearLayout>
+
+
 
         </ScrollView>
 
