--- a/app/src/main/res/layout/regulation.xml
+++ b/app/src/main/res/layout/regulation.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.LawActivity">
+    tools:context=".activity.RegulationActivity">
 
     <TableLayout
         android:layout_width="match_parent"
@@ -30,14 +31,14 @@
                     android:background="@drawable/go_back" />
 
                 <TextView
-                    android:id="@+id/code_name"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/law_name"
+                    android:layout_width="@dimen/qb_px_240"
                     android:layout_height="@dimen/qb_px_60"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="交通法规"
                     android:textColor="#FFFFFFFF"
-                    android:textSize="@dimen/qb_px_30" />
+                    android:textSize="@dimen/qb_px_20" />
 
                 <TextView
                     android:id="@+id/withdraw"
@@ -56,24 +57,49 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/qb_px_10"
+                android:layout_marginStart="@dimen/qb_px_10"
+                android:layout_marginEnd="@dimen/qb_px_15"
                 android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/qb_px_45"
+                    android:gravity="center"
+                    android:text="目录"
+                    android:textSize="@dimen/qb_px_30"/>
+
                 <TableLayout
-                    android:id="@+id/table"
+                    android:id="@+id/chapter_table"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/qb_px_10"
-                    android:layout_marginStart="@dimen/qb_px_10"
-                    android:layout_marginEnd="@dimen/qb_px_15"
                     android:stretchColumns="*"
                     android:shrinkColumns="*">
 
                 </TableLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/qb_px_45"
+                    android:gravity="center"
+                    android:text="正文"
+                    android:textSize="@dimen/qb_px_30"/>
+
+                <TableLayout
+                    android:id="@+id/regulation_table"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:stretchColumns="*"
+                    android:shrinkColumns="*">
+
+
+                </TableLayout>
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/qb_px_20"/>
-            </LinearLayout>
 
+            </LinearLayout>
 
         </ScrollView>
 
