--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="colorTopBackground">#8D4B95E0</color>
+    <color name="colorTopBackground">#6DA9E6</color>
+    <color name="colorTableBackground1">#AAAAAAAA</color>
+    <color name="colorTableBackground2">#8D4B95E0</color>
+    <color name="colorTextColor">#FFFFFFFF</color>
+    <color name="colorChapterBackground">#FFAD01</color>
 </resources>
