--- a/app/src/main/res/layout/regulation.xml
+++ b/app/src/main/res/layout/regulation.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -53,13 +52,14 @@
             </TableRow>
         </TableLayout>
 
-        <ScrollView>
+        <ScrollView android:id="@+id/scroll">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/qb_px_10"
                 android:layout_marginStart="@dimen/qb_px_10"
-                android:layout_marginEnd="@dimen/qb_px_15"
+                android:layout_marginEnd="@dimen/qb_px_10"
                 android:orientation="vertical">
 
                 <TextView
@@ -67,7 +67,7 @@
                     android:layout_height="@dimen/qb_px_45"
                     android:gravity="center"
                     android:text="目录"
-                    android:textSize="@dimen/qb_px_30"/>
+                    android:textSize="@dimen/qb_px_30" />
 
                 <TableLayout
                     android:id="@+id/chapter_table"
@@ -83,7 +83,7 @@
                     android:layout_height="@dimen/qb_px_45"
                     android:gravity="center"
                     android:text="正文"
-                    android:textSize="@dimen/qb_px_30"/>
+                    android:textSize="@dimen/qb_px_30" />
 
                 <TableLayout
                     android:id="@+id/regulation_table"
@@ -97,7 +97,7 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/qb_px_20"/>
+                    android:layout_height="@dimen/qb_px_20" />
 
             </LinearLayout>
 
