--- a/app/src/main/res/drawable/blank_background.xml
+++ b/app/src/main/res/drawable/blank_background.xml
@@ -2,11 +2,14 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- This is the line -->
     <item
-        android:right="-1dp"
-        android:left="-1dp">
+        android:right="-2dp"
+        android:left="-2dp"
+        android:top="-2dp"
+        android:bottom="-2dp">
         <shape>
             <stroke
                 android:width="1dp"
+                android:height="1dp"
                 android:color="#aaaaaaaa" />
         </shape>
     </item>
