--- a/app/src/main/res/layout/law.xml
+++ b/app/src/main/res/layout/law.xml
@@ -30,23 +30,22 @@
                     android:background="@drawable/go_back" />
 
                 <TextView
-                    android:id="@+id/code_name"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/qb_px_60"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="交通法规"
+                    android:text="法律法规"
                     android:textColor="#FFFFFFFF"
                     android:textSize="@dimen/qb_px_30" />
 
                 <TextView
-                    android:id="@+id/withdraw"
+                    android:id="@+id/law_select"
                     android:layout_width="@dimen/qb_px_60"
                     android:layout_height="@dimen/qb_px_60"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/qb_px_10"
                     android:gravity="center"
-                    android:text="返回"
+                    android:text="搜索"
                     android:textColor="#FFFFFFFF"
                     android:textSize="@dimen/qb_px_30" />
             </TableRow>
@@ -57,15 +56,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginTop="@dimen/qb_px_10"
+                android:layout_marginStart="@dimen/qb_px_10"
+                android:layout_marginEnd="@dimen/qb_px_10">
 
                 <TableLayout
                     android:id="@+id/table"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/qb_px_10"
-                    android:layout_marginStart="@dimen/qb_px_10"
-                    android:layout_marginEnd="@dimen/qb_px_10"
+
                     android:stretchColumns="*"
                     android:shrinkColumns="*">
 
