--- a/app/src/main/res/drawable/blue_change_orange.xml
+++ b/app/src/main/res/drawable/blue_change_orange.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true" android:drawable="@color/colorOrange"/>
-    <item android:state_pressed="true" android:drawable="@color/colorOrange" />
-    <item android:drawable="@color/colorBlue"/>
+    <!-- Non focused states -->
+    <item android:state_focused="false" android:state_selected="false" android:state_pressed="false" android:drawable="@color/colorBackgroundWhite" />
+    <item android:state_focused="false" android:state_selected="true" android:state_pressed="false" android:drawable="@color/colorGray" />
+    <!-- Focused states -->
+    <item android:state_focused="true" android:state_selected="false" android:state_pressed="false" android:drawable="@color/colorGray" />
+    <item android:state_focused="true" android:state_selected="true" android:state_pressed="false" android:drawable="@color/colorGray" />
+
+    <!-- Pressed -->
+    <item android:state_selected="true" android:state_pressed="true" android:drawable="@color/colorGray" />
+    <item android:state_pressed="true" android:drawable="@color/colorGray" />
 </selector>
