--- a/app/src/main/res/layout/law.xml
+++ b/app/src/main/res/layout/law.xml
@@ -24,28 +24,26 @@
 
                 <ImageView
                     android:id="@+id/go_back"
-                    android:layout_width="@dimen/qb_px_60"
-                    android:layout_height="@dimen/qb_px_60"
-                    android:layout_gravity="center"
-                    android:background="@drawable/go_back" />
+                    android:layout_width="@dimen/qb_px_40"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center" />
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/qb_px_60"
+                    android:layout_height="@dimen/qb_px_40"
                     android:layout_gravity="center"
-                    android:gravity="center"
                     android:text="法律法规"
                     android:textColor="#FFFFFFFF"
                     android:textSize="@dimen/qb_px_30" />
 
                 <TextView
                     android:id="@+id/law_select"
-                    android:layout_width="@dimen/qb_px_60"
-                    android:layout_height="@dimen/qb_px_60"
+                    android:layout_width="@dimen/qb_px_40"
+                    android:layout_height="@dimen/qb_px_40"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/qb_px_10"
+                    android:background="@drawable/setting"
                     android:gravity="center"
-                    android:text="搜索"
                     android:textColor="#FFFFFFFF"
                     android:textSize="@dimen/qb_px_30" />
             </TableRow>
@@ -60,6 +58,58 @@
                 android:layout_marginTop="@dimen/qb_px_10"
                 android:layout_marginStart="@dimen/qb_px_10"
                 android:layout_marginEnd="@dimen/qb_px_10">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/qb_px_40"
+                    android:layout_marginTop="@dimen/qb_px_10"
+                    android:layout_marginStart="@dimen/qb_px_10"
+                    android:layout_marginEnd="@dimen/qb_px_10"
+                    android:background="@drawable/index_backguound">
+
+                    <ImageView
+                        android:layout_width="@dimen/qb_px_30"
+                        android:layout_height="@dimen/qb_px_30"
+                        android:layout_marginStart="@dimen/qb_px_10"
+                        android:layout_gravity="center"
+                        android:background="@drawable/select"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:hint="搜索"
+                        android:textSize="@dimen/qb_px_20"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/qb_px_40"
+                    android:layout_marginTop="@dimen/qb_px_5"
+                    android:layout_marginBottom="@dimen/qb_px_10"
+                    android:layout_marginStart="@dimen/qb_px_10"
+                    android:layout_marginEnd="@dimen/qb_px_10">
+
+                    <TextView
+                        android:layout_width="@dimen/qb_px_150"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/qb_px_10"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:background="@drawable/select_background"
+                        android:text="法律搜索"
+                        android:textSize="@dimen/qb_px_20"/>
+                    <TextView
+                        android:layout_width="@dimen/qb_px_150"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/qb_px_15"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:background="@drawable/select_background"
+                        android:text="全文搜索"
+                        android:textSize="@dimen/qb_px_20" />
+                </LinearLayout>
 
                 <TableLayout
                     android:id="@+id/table"
