--- a/app/src/main/res/drawable/change_of_select.xml
+++ b/app/src/main/res/drawable/change_of_select.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@color/colorGray" />
-    <item android:state_checked="true" android:drawable="@color/colorGray" />
-    <item android:state_checked="false" android:drawable="@color/colorBackgroundWhite"/>
+    <!-- Non focused states -->
+    <item android:state_focused="false" android:state_selected="false" android:state_pressed="false" android:drawable="@drawable/not_select_background" />
+    <item android:state_focused="false" android:state_selected="true" android:state_pressed="false" android:drawable="@drawable/select_background" />
+    <!-- Focused states -->
+    <item android:state_focused="true" android:state_selected="false" android:state_pressed="false" android:drawable="@drawable/select_background" />
+    <item android:state_focused="true" android:state_selected="true" android:state_pressed="false" android:drawable="@drawable/select_background" />
+
+    <!-- Pressed -->
+    <item android:state_selected="true" android:state_pressed="true" android:drawable="@drawable/select_background" />
+    <item android:state_pressed="true" android:drawable="@drawable/select_background" />
 </selector>
