--- a/app/src/main/res/drawable/not_select_background.xml
+++ b/app/src/main/res/drawable/not_select_background.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/colorBackgroundWhite" />
-    <corners android:topLeftRadius="10dp"
+    <corners
+        android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         android:bottomRightRadius="10dp"
         android:bottomLeftRadius="10dp" />
-        <stroke
-            android:width="2dp"
-            android:height="2dp"
-            android:color="@color/colorBlueDark" />
+    <stroke
+        android:width="2dp"
+        android:height="2dp"
+        android:color="@color/colorBlueDark" />
 </shape>
