--- a/app/src/main/res/drawable/white_change_gray.xml
+++ b/app/src/main/res/drawable/white_change_gray.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true" android:drawable="@color/colorGray"/>
-    <item android:state_pressed="true" android:drawable="@color/colorGray" />
-    <item android:state_pressed="false" android:drawable="@color/colorBackgroundWhite"/>
+
+    <item android:state_focused="true" android:drawable="@drawable/table_row_background_gray" />
+    <item android:state_pressed="true" android:drawable="@drawable/table_row_background_gray" />
+    <item android:state_pressed="false" android:drawable="@drawable/table_row_background_white" />
 </selector>
