--- a/app/src/main/res/layout/law.xml
+++ b/app/src/main/res/layout/law.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -50,6 +49,7 @@
                     android:textSize="@dimen/qb_px_30" />
             </TableRow>
         </TableLayout>
+
         <LinearLayout
             android:id="@+id/select"
             android:layout_width="match_parent"
@@ -64,50 +64,14 @@
                 android:layout_height="@dimen/qb_px_30"
                 android:layout_marginStart="@dimen/qb_px_10"
                 android:layout_gravity="center"
-                android:background="@drawable/select"/>
+                android:background="@drawable/select" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:hint="搜索"
-                android:textSize="@dimen/qb_px_20"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/qb_px_40"
-            android:layout_marginTop="@dimen/qb_px_5"
-            android:layout_marginBottom="@dimen/qb_px_10"
-            android:layout_marginStart="@dimen/qb_px_10"
-            android:layout_marginEnd="@dimen/qb_px_10">
-
-            <TextView
-                android:id="@+id/title_select"
-                android:layout_width="@dimen/qb_px_150"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/qb_px_10"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:background="@drawable/select_background"
-                android:text="标题检索"
-                android:textSize="@dimen/qb_px_20"
-                android:textColor="@color/colorBackgroundWhite"/>
-            <TextView
-                android:id="@+id/full_text_select"
-                android:layout_width="@dimen/qb_px_150"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/qb_px_15"
-                android:layout_marginEnd="@dimen/qb_px_10"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:background="@drawable/not_select_background"
-                android:text="全文检索"
-                android:textSize="@dimen/qb_px_20"
-                android:textColor="@color/colorBlueDark"
-                />
+                android:hint="标题检索"
+                android:textSize="@dimen/qb_px_20" />
         </LinearLayout>
 
         <ScrollView
