--- a/app/src/main/res/layout/select.xml
+++ b/app/src/main/res/layout/select.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,67 +15,57 @@
         app:layout_constraintTop_toTopOf="parent"
         android:orientation="vertical">
 
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorTopBackground"
-            android:stretchColumns="1">
-
-            <TableRow android:background="@color/colorTopBackground">
-
-                <ImageView
-                    android:id="@+id/go_back"
-                    android:layout_width="@dimen/qb_px_40"
-                    android:layout_height="@dimen/qb_px_40"
-                    android:layout_gravity="center"
-                    android:background="@drawable/go_back"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/qb_px_40"
-                    android:layout_gravity="center"
-                    android:text="请输入文字进行搜索"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="@dimen/qb_px_30" />
-
-                <TextView
-                    android:id="@+id/setting"
-                    android:layout_width="@dimen/qb_px_40"
-                    android:layout_height="@dimen/qb_px_40"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/qb_px_10"
-                    android:background="@drawable/setting"
-                    android:gravity="center"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="@dimen/qb_px_30" />
-            </TableRow>
-        </TableLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/qb_px_40"
-            android:layout_marginTop="@dimen/qb_px_10"
-            android:layout_marginStart="@dimen/qb_px_10"
-            android:layout_marginEnd="@dimen/qb_px_10"
-            android:background="@drawable/index_background">
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="@dimen/qb_px_30"
-                android:layout_height="@dimen/qb_px_30"
+            <LinearLayout
+                android:layout_width="@dimen/qb_px_315"
+                android:layout_height="@dimen/qb_px_40"
+                android:layout_marginTop="@dimen/qb_px_10"
+                android:layout_marginBottom="@dimen/qb_px_10"
                 android:layout_marginStart="@dimen/qb_px_10"
+                android:background="@drawable/index_background">
+
+                <ImageView
+                    android:layout_width="@dimen/qb_px_30"
+                    android:layout_height="@dimen/qb_px_30"
+                    android:layout_marginStart="@dimen/qb_px_10"
+                    android:layout_gravity="center"
+                    android:background="@drawable/select" />
+
+                <com.wyt.searchedittext.SearchEditText
+                    android:id="@+id/select_text"
+                    android:layout_width="@dimen/qb_px_250"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:textColor="@color/colorBackgroundWhite"
+                    android:background="#00FFFFFF"
+                    android:hint="搜索"
+                    android:textSize="@dimen/qb_px_20"
+                    android:layout_weight="1"
+                    android:imeOptions="actionNone"
+                    android:singleLine="true"
+                    android:focusable="true" />
+                <ImageView
+                    android:id="@+id/clear_select"
+                    android:layout_width="@dimen/qb_px_20"
+                    android:layout_height="@dimen/qb_px_20"
+                    android:visibility="invisible"
+                    android:background="@drawable/clear_password"
+                    android:layout_gravity="center" />
+            </LinearLayout>
+            <TextView
+                android:id="@+id/go_back"
+                android:layout_width="@dimen/qb_px_40"
+                android:layout_height="@dimen/qb_px_40"
+                android:layout_marginEnd="@dimen/qb_px_10"
+                android:gravity="center"
                 android:layout_gravity="center"
-                android:background="@drawable/select"/>
-            <com.wyt.searchedittext.SearchEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:textColor="@color/colorBackgroundWhite"
-                android:background="#00FFFFFF"
-                android:hint="搜索"
-                android:textSize="@dimen/qb_px_20"
-                android:imeOptions="actionNone"
-                android:singleLine="true"
-                android:focusable="true"
-                />
+                android:text="取消"
+                android:textSize="@dimen/qb_px_15"
+                android:textColor="@color/colorBlueDark"
+                android:background="@drawable/go_back" />
         </LinearLayout>
 
         <LinearLayout
@@ -98,7 +87,8 @@
                 android:background="@drawable/select_background"
                 android:text="标题检索"
                 android:textSize="@dimen/qb_px_20"
-                android:textColor="@color/colorBackgroundWhite"/>
+                android:textColor="@color/colorBackgroundWhite" />
+
             <TextView
                 android:id="@+id/full_text_select"
                 android:layout_width="@dimen/qb_px_150"
@@ -116,14 +106,16 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/qb_px_10"
+            android:layout_marginStart="@dimen/qb_px_10"
+            android:layout_marginEnd="@dimen/qb_px_10"
+            android:layout_marginBottom="@dimen/qb_px_10">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="@dimen/qb_px_10"
-                android:layout_marginStart="@dimen/qb_px_10"
-                android:layout_marginEnd="@dimen/qb_px_10">
+                android:orientation="vertical">
 
 
                 <TableLayout
