--- a/app/src/main/res/drawable/index_background.xml
+++ b/app/src/main/res/drawable/index_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#AAAAAAAA" />
+    <solid android:color="@color/colorPrimary" />
     <corners
         android:topLeftRadius="@dimen/qb_px_10"
         android:topRightRadius="@dimen/qb_px_10"
