--- a/app/src/main/res/drawable/not_select_background.xml
+++ b/app/src/main/res/drawable/not_select_background.xml
@@ -9,5 +9,5 @@
     <stroke
         android:width="2dp"
         android:height="2dp"
-        android:color="@color/colorBlueDark" />
+        android:color="@color/colorTopBackground" />
 </shape>
