--- a/app/src/main/res/drawable/go_back_click.xml
+++ b/app/src/main/res/drawable/go_back_click.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true" android:drawable="@drawable/table_row_background_gray" />
     <item android:state_pressed="true" android:drawable="@drawable/table_row_background_gray" />
-    <item android:state_pressed="false" android:drawable="@drawable/table_row_background_white" />
+    <item android:state_pressed="false" android:drawable="@drawable/go_back" />
 </selector>
