--- a/app/src/main/res/drawable/not_select_right_background.xml
+++ b/app/src/main/res/drawable/not_select_right_background.xml
@@ -2,10 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/colorBackgroundWhite" />
     <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:bottomLeftRadius="10dp" />
+        android:topRightRadius="@dimen/qb_px_5"
+        android:bottomRightRadius="@dimen/qb_px_5" />
     <stroke
         android:width="2dp"
         android:height="2dp"
