--- a/app/src/main/res/drawable/select_left_background.xml
+++ b/app/src/main/res/drawable/select_left_background.xml
@@ -2,8 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/colorTopBackground" />
     <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:bottomLeftRadius="10dp" />
+        android:topLeftRadius="@dimen/qb_px_5"
+        android:bottomLeftRadius="@dimen/qb_px_5" />
 </shape>
