--- a/app/src/main/res/layout/law.xml
+++ b/app/src/main/res/layout/law.xml
@@ -27,6 +27,7 @@
                     android:id="@+id/go_back"
                     android:layout_width="@dimen/qb_px_40"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/qb_px_5"
                     android:layout_gravity="center" />
 
                 <TextView
@@ -37,16 +38,14 @@
                     android:textColor="#FFFFFFFF"
                     android:textSize="@dimen/qb_px_30" />
 
-                <TextView
+                <Button
                     android:id="@+id/law_select"
                     android:layout_width="@dimen/qb_px_40"
                     android:layout_height="@dimen/qb_px_40"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/qb_px_10"
+                    android:layout_marginEnd="@dimen/qb_px_15"
                     android:background="@drawable/setting"
-                    android:gravity="center"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="@dimen/qb_px_30" />
+                    android:gravity="center"/>
             </TableRow>
         </TableLayout>
 
