--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#DDDDDD</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#AAAAAAAA</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorTopBackground">#6DA9E6</color>
     <color name="colorGray">#AAAAAAAA</color>
