--- a/app/src/main/res/drawable/bottom_line_background.xml
+++ b/app/src/main/res/drawable/bottom_line_background.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- This is the line -->
     <item
-        android:right="-2dp"
+        android:bottom="-2dp"
         android:left="-2dp"
         android:top="-2dp">
         <shape>
