--- a/app/src/main/res/drawable/white_change_gray.xml
+++ b/app/src/main/res/drawable/white_change_gray.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true" android:drawable="@drawable/table_row_background_gray" />
+    <!-- Non focused states -->
+    <item android:state_focused="false" android:state_selected="false" android:state_pressed="false" android:drawable="@drawable/table_row_background_white" />
+    <item android:state_focused="false" android:state_selected="true" android:state_pressed="false" android:drawable="@drawable/table_row_background_gray" />
+    <!-- Focused states -->
+    <item android:state_focused="true" android:state_selected="false" android:state_pressed="false" android:drawable="@drawable/table_row_background_gray" />
+    <item android:state_focused="true" android:state_selected="true" android:state_pressed="false" android:drawable="@drawable/table_row_background_gray" />
+
+    <!-- Pressed -->
+    <item android:state_selected="true" android:state_pressed="true" android:drawable="@drawable/table_row_background_gray" />
     <item android:state_pressed="true" android:drawable="@drawable/table_row_background_gray" />
+
+    <item android:state_focused="true" android:drawable="@drawable/table_row_background_gray" />
     <item android:state_pressed="false" android:drawable="@drawable/table_row_background_white" />
 </selector>
