--- a/app/src/main/res/drawable/text_view_background.xml
+++ b/app/src/main/res/drawable/text_view_background.xml
@@ -4,13 +4,9 @@
         android:right="-2dp"
         android:left="-2dp">
         <shape>
-            <stroke
-                android:width="0.1px"
-                android:height="0.1px"
-                android:color="@color/colorGray" />
             <padding
-                android:top="@dimen/qb_px_8"
-                android:bottom="@dimen/qb_px_8" />
+                android:left="@dimen/qb_px_10"
+                android:right="@dimen/qb_px_10"/>
         </shape>
     </item>
 
