--- a/app/src/main/res/layout/law.xml
+++ b/app/src/main/res/layout/law.xml
@@ -39,13 +39,13 @@
                     android:textSize="@dimen/qb_px_30" />
 
                 <Button
-                    android:id="@+id/law_select"
+                    android:id="@+id/law_setting"
                     android:layout_width="@dimen/qb_px_40"
                     android:layout_height="@dimen/qb_px_40"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/qb_px_15"
-                    android:background="@drawable/setting"
-                    android:gravity="center"/>
+                    android:background="@drawable/click_setting"
+                    android:gravity="center" />
             </TableRow>
         </TableLayout>
 
@@ -63,7 +63,7 @@
                 android:layout_height="@dimen/qb_px_30"
                 android:layout_marginStart="@dimen/qb_px_10"
                 android:layout_gravity="center"
-                android:background="@drawable/select" />
+                android:background="@drawable/click_select" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -82,7 +82,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginTop="@dimen/qb_px_10"
-                android:layout_marginStart="@dimen/qb_px_10"
                 android:layout_marginEnd="@dimen/qb_px_10">
 
 
