--- a/app/src/main/res/layout/option.xml
+++ b/app/src/main/res/layout/option.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -16,7 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/copy"
@@ -24,7 +23,7 @@
             android:layout_height="@dimen/qb_px_30"
             android:text="复制"
             android:gravity="center"
-            android:textSize="@dimen/qb_px_20"/>
+            android:textSize="@dimen/qb_px_20" />
     </LinearLayout>
 
 
