--- a/app/src/main/res/layout/select.xml
+++ b/app/src/main/res/layout/select.xml
@@ -31,7 +31,7 @@
                     android:layout_height="@dimen/qb_px_30"
                     android:layout_marginStart="@dimen/qb_px_10"
                     android:layout_gravity="center"
-                    android:background="@drawable/select" />
+                    android:background="@drawable/click_select" />
 
                 <com.wyt.searchedittext.SearchEditText
                     android:id="@+id/select_text"
